fix footer spacing and custom head props

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,6 +2,7 @@
     background-color: var(--color-black);
     color: var(--color-white);
     padding: 60px 80px;
+    margin-top: 100px;
 }
 .content__container {
     display: flex;
